<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.einfoplanet.demo.ui.cart.CartViewModel" />
    </data>

    <RelativeLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:background="@color/white">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            style="@style/Widget.AppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/margin_normal"
                app:layout_scrollFlags="scroll|snap|exitUntilCollapsed|enterAlways">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:gravity="center"
                    android:minHeight="?actionBarSize"
                    android:text="Order Summary"
                    android:textAppearance="@style/TextAppearance.ADSSched.ToolbarTitle" />
            </FrameLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/appbar"
            android:scrollbars="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/borderfile"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:text="Order Details"
                        style="@style/TextAppearance.ADSSched.SessionTitle2"
                        android:textColor="#424242" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Total No. of Items : "
                            style="@style/TextAppearance.ADSSched.SessionTitle2"
                            android:textColor="#424242" />

                        <TextView
                            android:id="@+id/txt_no_of_items"
                            style="@style/TextAppearance.ADSSched.SessionTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="10"
                            android:textColor="@color/colorPrimaryDark" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/TextAppearance.ADSSched.SessionTitle2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Total Amount : "
                            android:textColor="#424242" />

                        <TextView
                            android:id="@+id/txt_total_amount"
                            style="@style/TextAppearance.ADSSched.SessionTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="15000"
                            android:textColor="@color/colorPrimaryDark" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/TextAppearance.ADSSched.SessionTitle2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Estimated Delivery Date : "
                            android:textColor="#424242" />

                        <TextView
                            android:id="@+id/txt_delivery_date"
                            style="@style/TextAppearance.ADSSched.SessionTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="28/06/2020"
                            android:textColor="@color/colorPrimaryDark" />
                    </LinearLayout>

                </LinearLayout>

                <TextView
                    style="@style/TextAppearance.ADSSched.SessionTitle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center_vertical"
                    android:text="Payment Mode :"
                    android:textColor="#424242" />

                <RadioGroup
                    android:id="@+id/radio_grp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_paytm"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:enabled="false"
                        style="@style/TextAppearance.ADSSched.SessionTitle2"
                        android:text="PayTm" />

                    <RadioButton
                        android:id="@+id/rb_mobikwick"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:enabled="false"
                        style="@style/TextAppearance.ADSSched.SessionTitle2"
                        android:text="Mobikwick" />

                    <RadioButton
                        android:id="@+id/rb_cod"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:checked="true"
                        android:focusable="false"
                        style="@style/TextAppearance.ADSSched.SessionTitle2"
                        android:text="COD" />

                </RadioGroup>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/view_width_small"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:background="@color/grey_light" />

                <TextView
                    style="@style/TextAppearance.ADSSched.SessionTitle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:gravity="center_vertical"
                    android:text="Complete Address :"
                    android:textColor="#424242" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:nextFocusDown="@id/et_email_id"
                    style="@style/TextAppearance.ADSSched.SessionTitle2"
                    android:hint="Enter Name" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_email_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:nextFocusDown="@id/et_mobile_no"
                    style="@style/TextAppearance.ADSSched.SessionTitle2"
                    android:hint="Enter Email" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_mobile_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Mobile Number"
                    android:digits="0123456789"
                    android:maxEms="10"
                    android:maxLength="10"
                    android:nextFocusDown="@id/et_complete_address"
                    style="@style/TextAppearance.ADSSched.SessionTitle2"
                    android:inputType="number" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_complete_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:nextFocusDown="@id/et_pin_code"
                    style="@style/TextAppearance.ADSSched.SessionTitle2"
                    android:hint="Complete address"
                    android:minLines="3" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_pin_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:hint="Pincode"
                    style="@style/TextAppearance.ADSSched.SessionTitle2"
                    android:inputType="number" />
            </LinearLayout>
        </ScrollView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_order_now"
            style="@style/TextAppearance.ADSSched.SessionTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/colorPrimaryDark"
            android:text="Continue"
            android:textColor="@color/white" />
    </RelativeLayout>
</layout>
