...
                android:background="@color/white"
                android:text="@{`Rs `+viewModel.cartTotalAmount}"
                android:textAllCaps="false"
                tools:text="₹ 15490" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_place_order"
                style="@style/TextAppearance.ADSSched.SessionTitle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:text="Place Order"
                android:textAllCaps="false"
                android:textColor="@color/gen_white"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
