...
                    android:layout_height="200dp"
                    android:foregroundGravity="center"
                    app:lottie_autoPlay="true"
                    app:lottie_fileName="orderplaced.json" />

                <TextView
                    android:id="@+id/txt_order_placed"
                    style="@style/TextAppearance.ADSSched.SessionTitle2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/orderdetails" />
...
