...
    \n\n
    We are happy to help you ! In case of any query contact us at our handles mentioned below !\n\n
    Phone : +91-7905022222\n
    Email : beingdevofficial@gmail.com\n
    Address : 424 Lorem Ipsum , Pune , Maharashtra ( 226025 )</string>
    <string name="title_activity_process_order">ProcessOrder</string>
    <string name="orderdetails">Your Order has been Placed Successfully!</string>


    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
...
